discussion/kv_engine/174539/174539_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51606: Pass VB State lock to PDM::notifySnapshotEndReceived()

In a future change we will pass the lock back when calling
PDM::sendSeqnoAck() as we rely on the lock being held in that
function.

Change-Id: Ia6a0bae5c9e5380ab872e9d257e4e954fc10d0d1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-05-05 19:02:12.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-05 19:02:29.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/297762/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-05 19:56:34.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/162/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/active_durability_monitor.h:232:58: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) override;
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: hidden overloaded virtual function "DurabilityMonitor::notifyLocalPersistence" declared here: type mismatch at 1st parameter ("int &" vs "folly::SharedMutex::ReadHolder &")
    virtual void notifyLocalPersistence(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13: error: use of undeclared identifier "folly" [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) = 0;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/passive_durability_monitor.h:180:58: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) override;
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: hidden overloaded virtual function "DurabilityMonitor::notifyLocalPersistence" declared here: type mismatch at 1st parameter ("int &" vs "folly::SharedMutex::ReadHolder &")
    virtual void notifyLocalPersistence(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/durability_monitor_test.cc:3852:30: error: variable type "PassiveDurabilityMonitor" is an abstract class [clang-diagnostic-error]
    PassiveDurabilityMonitor pdm(*engine->getVBucket(vbid));
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: unimplemented pure virtual method "notifyLocalPersistence" in "PassiveDurabilityMonitor"
    virtual void notifyLocalPersistence(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/durability_monitor_test.cc:3874:29: error: variable type "ActiveDurabilityMonitor" is an abstract class [clang-diagnostic-error]
    ActiveDurabilityMonitor adm(
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: unimplemented pure virtual method "notifyLocalPersistence" in "ActiveDurabilityMonitor"
    virtual void notifyLocalPersistence(
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/162/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/active_durability_monitor.h:232:58:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/162/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/160/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/160/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/161/ : FAILURE

Compile error at [2022-05-05T19:10:08.052Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/161/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/181/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/159]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2327 Test failed: `" (Expected `398131" to be less than or equal to `385024" - Unexpected fileSize for vbucket)
[2022-05-05T19:15:01.619Z] (265 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/181/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/205/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16305/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/155/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/165/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/164/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/168/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/164/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
